Improved inline attachments visibility to prevent questions

--- a/dev/Styles/User/Attachments.less
+++ b/dev/Styles/User/Attachments.less
@@ -6,9 +6,9 @@
 	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04), 0 1px 5px rgba(0, 0, 0, 0.1);
 	display: inline-block;
 	list-style: none;
-	line-height: 24px;
+	line-height: 20px;
 	margin: 5px;
-	min-height: 50px;
+	min-height: 48px;
 	max-width: 200px;
 	min-width: 60px;
 	overflow: hidden;
@@ -33,8 +33,8 @@
 
 	.attachmentIconParent {
 		position: absolute;
-		height: 56px;
-		width: 60px;
+		height: 48px;
+		width: 48px;
 		text-align: center;
 	}
 
@@ -65,7 +65,7 @@
 	.attachmentNameParent {
 		border-left: 1px solid #ddd;
 		cursor: pointer;
-		margin-left: 60px;
+		margin-left: 48px;
 		min-width: 90px;
 		padding: 4px 4px 3px 6px;
 		position: relative;
